# ChangeLog for net-im/tkabber
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/tkabber/ChangeLog,v 1.9 2003/04/23 17:02:47 utx Exp $

*tkabber-0.9.4b (02 Mar 2003)

  23 Apr 2003; Stanislav Brabec <utx@gentoo.org> tkabber-0.9.4b.ebuild:
  Fixed DEPEND for tcl/tk 8.4 (#19558).

  02 Mar 2003; Arcady Genkin <agenkin@gentoo.org> :
  Version update.

*tkabber-0.9.3b-r1 (31 Jan 2003)

  23 Apr 2003; Stanislav Brabec <utx@gentoo.org> tkabber-0.9.3b-r1.ebuild:
  Fixed DEPEND for tcl/tk 8.4 (#19558).

  04 Feb 2003; Arcady Genkin <agenkin@gentoo.org> :
  Wrapped SSL and GPG support in the corresponding USE flags.

  02 Feb 2003; Arcady Genkin <agenkin@gentoo.org> :
  Added dev-tcltk/tclxml-expat dependency.  This makes the ebuild utilize
  all documented optional features of tkabber.
	
*tkabber-0.9.3b (31 Jan 2003)

  01 Feb 2003; Arcady Genkin <agenkin@gentoo.org> :
  Added dev-tcltk/tkTheme to dependencies.  This adds docking support for
  KDE and WindowMaker, for example.
  Added dev-tcltk/tkXwin to dependencies.  This adds auto-away feature.
  Added dev-tcltk/tclgpgme to dependencies.  This adds GPG
  encryption/signing of the messages.
	
  31 Jan 2003; Arcady Genkin <agenkin@gentoo.org> :
  Initial version of the package.